# face-recog

./: README.md  build_log.txt  build_log_final.txt  build_wrapper.sh  error_log.txt  log.txt  make_file_only.sh  sample_wrapper.cpp  ws_mess_Door.txt
AI_model/: FaceRecog_wrapper.cpp  FaceRecog_wrapper.h  sface_nbg_meta.json  vnn_post_process.cpp  vnn_post_process.h  vnn_yunet_network_binary.h
FaceRecognition-FAISS/: Yunet.nb  app_streamlit.py  backup_camera.txt  backup_user_management.txt  requirements.txt  user_data.json  user_management.py  websocket_client.py
FaceRecognition_sface_pybind/: CMakeLists.txt  build_pybind.sh  face_recognition_pybind.cpp
Verify_alignCrop/: ab_testing.py
Verify_alignCrop/results/: pair_scores_align.csv  pair_scores_bbox.csv
bk/: vnn_pre_process_yunet_network_binary.cpp  vnn_sface_network_binary.c  vnn_sface_network_binary.h
face_detection_yunet_quantize_nbg_unify/: Makefile  main  main.cpp  nbg_meta.json  vnn_.c  vnn_post_process.cpp  vnn_post_process.h  vnn_pre_process.cpp  vnn_pre_process.h
face_detection_yunet_quantize_nbg_unify/opencv4.2/lib/: libopencv_calib3d.so.4.2.0  libopencv_features2d.so.4.2.0  libopencv_flann.so.4.2.0  libopencv_gapi.so.4.2.0  libopencv_highgui.so.4.2.0  (+7 more)
face_recognition_sface_2021dec_ovx/: FaceRecog_wrapper.cpp  Yunet.nb  vnn_post_process_yunet_network_binary.cpp  vnn_post_process_yunet_network_binary.h  vnn_pre_process_yunet_network_binary.cpp  vnn_pre_process_yunet_network_binary.h  vnn_sface_network_binary.c  vnn_sface_network_binary.h  vnn_yunet_network_binary.c  vnn_yunet_network_binary.h
